--- a/html/pfappserver/root/config/pfdetect/index.tt
+++ b/html/pfappserver/root/config/pfdetect/index.tt
@@ -23,7 +23,14 @@
       [% INCLUDE config/pfdetect/list.tt %]
 
       [%- IF can_access("PFDETECT_CREATE") %]
-      <div class="form-actions">
-        <a class="btn createItem" href="[% c.uri_for(c.controller.action_for('create')) %]">[% l('Add Syslog parser') %]</a>
-      </div>
+        <div class="form-actions">
+          <div class="btn-group">
+            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">[% l('Add Syslog parser') %] <span class="caret"></span></a>
+            <ul id="createSource" class="dropdown-menu">
+              [% FOREACH type IN types -%]
+                <li><a class="createItem" href="[% c.uri_for(c.controller.action_for('create_type'), type) %]">[% l(type) %]</a></li>
+              [% END -%]
+            </ul>
+          </div>
+        </div>
       [%- END %]
