Do not use a modal

--- a/html/pfappserver/root/config/pfdetect/index.tt
+++ b/html/pfappserver/root/config/pfdetect/index.tt
@@ -28,7 +28,7 @@
             <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">[% l('Add Syslog parser') %] <span class="caret"></span></a>
             <ul id="createSource" class="dropdown-menu">
               [% FOREACH type IN types -%]
-                <li><a class="createItem" href="[% c.uri_for(c.controller.action_for('create_type'), type) %]">[% l(type) %]</a></li>
+                <li><a href="[% c.pf_hash_for(c.controller.action_for('create_type'), type) %]">[% l(type) %]</a></li>
               [% END -%]
             </ul>
           </div>
