--- a/html/pfappserver/root/config/pfdetect/list.tt
+++ b/html/pfappserver/root/config/pfdetect/list.tt
@@ -8,10 +8,10 @@
         <tbody>
           [% FOREACH item IN items %]
           <tr>
-            <td class="item"><a href="[% c.uri_for(c.controller.action_for('view'), [ item.id ]) %]">[% item.id | html %]</a></td>
+            <td ><a href="[% c.pf_hash_for(c.controller.action_for('view'), [ item.id ]) %]">[% item.id | html %]</a></td>
             <td>
               [%- IF can_access("PFDETECT_CREATE") %]
-              <a class="btn btn-mini" href="[% c.uri_for(c.controller.action_for('clone'), [ item.id]) %]">[% l('Clone') %]</a>
+              <a class="btn btn-mini" href="[% c.pf_hash_for(c.controller.action_for('clone'), [ item.id]) %]">[% l('Clone') %]</a>
               [%- END %]
               [%- IF can_access("PFDETECT_DELETE") %]
               <a class="btn btn-mini btn-danger" href="[% c.uri_for(c.controller.action_for('remove'), [ item.id ]) %]">[% l('Delete') %]</a>
