--- a/html/pfappserver/root/config/pfdetect/type/regex.tt
+++ b/html/pfappserver/root/config/pfdetect/type/regex.tt
@@ -1,1 +1,14 @@
 [% form.block('definition').render | none %]
+<div class="controls">
+    <div class="control-group">
+        <button type="button" class="btn " data-toggle="collapse" data-target="#test-regex"> Test Parser </button>
+        <div id="test-regex" class="collapse">
+            <textarea name="loglines" disabled="disabled"></textarea>
+            <div>
+                <button data-loading-text="Testing..." data-test-action=[% c.uri_for(c.controller.action_for('test_regex_parser'))%] id="test-regex-btn" type="button" class="btn " data-toggle="collapse">Do Test</button>
+            </div>
+        </div>
+        <div id="test-regex-results">
+        </div>
+    </div>
+</div>
