--- a/html/pfappserver/root/config/pfdetect/type/regex.tt
+++ b/html/pfappserver/root/config/pfdetect/type/regex.tt
@@ -1,9 +1,8 @@
 [% form.block('definition').render | none %]
 <div class="controls">
     <div class="control-group">
-        <button type="button" class="btn " data-toggle="collapse" data-target="#test-regex"> [% l('Test Parser') %] </button>
-        <div id="test-regex" class="collapse">
-            <textarea class="input-xxlarge" name="loglines" disabled="disabled" rows="3"></textarea>
+        <div id="test-regex" >
+            <textarea class="input-xxlarge" name="loglines" rows="3"></textarea>
             <div>
                 <button data-loading-text="[% l('Testing...') %]" data-test-action=[% c.uri_for(c.controller.action_for('test_regex_parser'))%] id="test-regex-btn" type="button" class="btn " data-toggle="collapse">[% l('Run Test') %]</button>
             </div>
