--- a/html/pfappserver/root/config/pfdetect/test_regex_parser.tt
+++ b/html/pfappserver/root/config/pfdetect/test_regex_parser.tt
@@ -40,7 +40,7 @@ $VAR1 = [
       [% FOREACH match IN run.matches %]
         [% FOREACH action IN match.actions %]
         <div>
-        - [% match.rule.name %] - [% action.0 %]('[% action.1.join("', '") %]')
+        - [% match.rule.name %] : [% action.0 %]('[% action.1.join("', '") %]')
         </div>
         [% END %]
       [% END %]
