Add javascript support for sortable fields

--- a/html/pfappserver/root/static/admin/common.css
+++ b/html/pfappserver/root/static/admin/common.css
@@ -84,9 +84,15 @@ table .category-header {
     font-weight: bold;
     width: 20px;
 }
+
 span.sort-handle {
     display: inline-block;
 }
+
+span.sort-handle:hover {
+    background-image: url('/static/app/grab.png');
+}
+
 td.sort-handle {
     text-align: center;
     vertical-align: middle;
