Node cleanup is disabled by default

--- a/addons/dev-helpers/templates/pfmon.conf.tt
+++ b/addons/dev-helpers/templates/pfmon.conf.tt
@@ -16,7 +16,7 @@ description=[% c.class.replace('_', ' ') %]
 # enabled
 #
 # If the task [% c.name %] is enabled
-enabled=enabled
+enabled=[% c.enabled %]
 #
 # interval
 #
