--- a/html/pfappserver/root/config/source/list.tt
+++ b/html/pfappserver/root/config/source/list.tt
@@ -1,26 +1,46 @@
-      <table id="items" class="table items[% ' hidden' UNLESS items.size %]" data-list-uri="[% c.uri_for(c.controller.action_for('list')) %]">
-        <thead>
-          <tr>
-            <th>[% l('Source Name') %]</th>
-            <th>[% l('Description') %]</th>
-            <th>[% l('Type') %]</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          [% FOREACH item IN items %]
-          <tr>
-            <td ><a href="[% c.pf_hash_for(c.controller.action_for('view'), [ item.id ]) %]">[% item.id | html %]</a></td>
-            <td>[% item.description | html%]</td>
-            <td>[% item.type | html%]</td>
-            <td>
-              [% IF can_access("USERS_SOURCES_CREATE") %]<a class="btn btn-mini" href="[% c.uri_for(c.controller.action_for('clone'), [ item.id]) %]">[% l('Clone') %]</a>[% END %]
-              [% IF can_access("USERS_SOURCES_DELETE") %]<a class="btn btn-mini btn-danger" href="[% c.uri_for(c.controller.action_for('remove'), [ item.id ]) %]">[% l('Delete') %]</a>[% END %]
-            </td>
-          </tr>
-          [% END -%]
-          <div id="noItems" class="unwell[% ' hidden' IF items.size %]">
-            <i class="icon-unlock icon-large"></i><p>[% l('No source defined') %]</p>
-          </div>
-        </tbody>
-      </table>
+[% MACRO source_listing(id, heading, items, sortable) BLOCK %]
+<h4>[% l(heading) %]</h4>
+<table id=[% id %] class="table sources [% ' hidden' UNLESS items.size %]" >
+  <thead>
+    <tr>
+      <th class="hidden-phone" width="20px"></th>
+      <th>[% l('Name') %]</th>
+      <th class="hidden-phone">[% l('Description') %]</th>
+      <th>[% l('Type') %]</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody class="dynamic-list-sortable">
+    [% FOREACH item IN items %]
+    <tr id=[% item.id %]>
+      [% IF sortable %]
+      <td 
+        class="hidden-phone sort-handle" 
+        data-sortable-text="[% item.id %]" 
+        data-base-id="[% id %]" 
+        data-sortable-item="#[% item.id %]" 
+        data-sortable-scope="[% id %]" data-sortable-parent="#[% id %] tbody"
+      >[% loop.count %]</td>
+      [% ELSE %]
+      <td class="hidden-phone"></td>
+      [% END %]
+      <td ><a href="[% c.pf_hash_for(c.controller.action_for('view'), [ item.id ]) %]">[% item.id | html %]</a></td>
+      <td class="hidden-phone">[% item.description | html%]</td>
+      <td>[% item.type | html%]</td>
+      <td>
+        [% IF can_access("USERS_SOURCES_CREATE") %]<a class="btn btn-mini" href="[% c.pf_hash_for(c.controller.action_for('clone'), [ item.id]) %]">[% l('Clone') %]</a>[% END %]
+        [% IF can_access("USERS_SOURCES_DELETE") %]<a class="btn btn-mini btn-danger" href="[% c.uri_for(c.controller.action_for('remove'), [ item.id ]) %]">[% l('Delete') %]</a>[% END %]
+      </td>
+    </tr>
+    [% END -%]
+    <!--tr><td colspan="3"></td><td class="hidden-phone" colspan="2"></td></tr-->
+  </tbody>
+</table>
+[% END %]
+
+<div id="sources"  data-list-uri="[% c.uri_for(c.controller.action_for('list')) %]" >
+[% source_listing('internal-sources', 'Internal Sources', source_by_class.internal, 1) | none %]
+[% source_listing('external-sources', 'External Sources', source_by_class.external) | none %]
+[% source_listing('exclusive-sources', 'Exclusive Sources', source_by_class.exclusive) | none %]
+[% source_listing('billing-sources', 'Billing Sources', source_by_class.billing) | none %]
+</div>
