Use custom view actions

--- a/html/pfappserver/root/config/source/view.tt
+++ b/html/pfappserver/root/config/source/view.tt
@@ -10,7 +10,7 @@
 
 <h3>[% item.id | html %] <small>[% item.type | html %]</small></h3>
 
-<form name="modalItem" class="form-horizontal" action="[% action_url %]" method="post">
+<form name="modalSource" class="form-horizontal" action="[% action_url %]" method="post">
   [%- IF item.id %]<input type="hidden" name="id" value="[% item.id | html %]">[% END %]
 
         [% form.field('id').render UNLESS item && item.id.defined %]
