--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -5,6 +5,7 @@
         'app/pf-bootstrap-swap-class',
         'js/configuration',
         'admin/searches',
+        'admin/config/source',
         'js/interface',
         'js/tree.jquery',
         ]
