Fix issue with sorting

--- a/html/pfappserver/root/static/admin/common.css
+++ b/html/pfappserver/root/static/admin/common.css
@@ -119,10 +119,17 @@ tr:hover .sort-handle {
     filter: alpha(opacity=70);
     z-index: 1200;
 }
+
 li.drop-row,
 .drop-row td {
     border-top: 1px solid #333;
 }
+
+.drop-dynamic-row,
+.drop-dynamic-row td {
+    border-top: 1px solid #333;
+}
+
 /* fineuploader */
 .qq-upload-button {
     width: auto;
