Fix formating of controls in a dynamic-list-sortable

--- a/html/pfappserver/root/static/admin/common.css
+++ b/html/pfappserver/root/static/admin/common.css
@@ -85,6 +85,10 @@ table .category-header {
     width: 20px;
 }
 
+.dynamic-list-sortable > .controls {
+    clear: both;
+}
+
 span.sort-handle {
     display: inline-block;
 }
