--- a/html/pfappserver/root/config/pfdetect/view.tt
+++ b/html/pfappserver/root/config/pfdetect/view.tt
@@ -10,6 +10,12 @@
 
 </ul>
 <h3><i>[% l('Syslog parser') %]</i> [% item.type | html %]</h3>
+<div class="hidden" id="regex_parser_templates">
+  <input id="default_api_parameters" name="default_api_parameters" type="text" class="input-xxlarge" >
+  [% FOREACH regex_allowed_action IN regex_allowed_actions %]
+  <input type="text" id="[% regex_allowed_action.method %]_api_parameters" name="[% regex_allowed_action.method %]_api_parameters" class="input-xxlarge" value="[% regex_allowed_action.spec %]" >
+  [% END %]
+</div>
 
 <form name="modalPfdetect" class="form-horizontal form-condensed" action="[% action_uri %]" method="post">
   <h2></h2>
