--- a/addons/dev-helpers/templates/pf-dal.pm.tt
+++ b/addons/dev-helpers/templates/pf-dal.pm.tt
@@ -2,6 +2,7 @@
 use base qw(pf::dal);
 
 our @FIELD_NAMES;
+our @INSERTABLE_FIELDS;
 our @PRIMARY_KEYS;
 our %DEFAULTS;
 our %FIELDS_META;
@@ -18,6 +19,14 @@ BEGIN {
 [%- NEXT IF col.mysql_is_auto_increment -%]
 [%- NEXT IF col.pf_default_value == "'CURRENT_TIMESTAMP'" -%]
         [% col.COLUMN_NAME %] => [% col.pf_default_value %],
+[% END -%]
+    );
+
+    @INSERTABLE_FIELDS = qw(
+[% FOREACH col IN cols -%]
+[%- NEXT IF col.mysql_is_auto_increment -%]
+[%- NEXT IF col.pf_default_value == "'CURRENT_TIMESTAMP'" -%]
+        [% col.COLUMN_NAME %]
 [% END -%]
     );
 
@@ -77,6 +86,10 @@ sub _find_one_sql {
 
 sub _updateable_fields {
     return [@FIELD_NAMES];
+}
+
+sub _inserteable_fields {
+    return [@INSERTABLE_FIELDS];
 }
 
 sub get_meta {
