--- a/addons/dev-helpers/templates/pf-dal.pm.tt
+++ b/addons/dev-helpers/templates/pf-dal.pm.tt
@@ -1,4 +1,8 @@
 [% WRAPPER "class-wrapper.tt" -%]
+###
+### [% class %] is auto generated any change to this file will be lost
+### Make and changes to this file in [% class.replace('::_', '::') %]
+###
 use base qw(pf::dal);
 
 our @FIELD_NAMES;
@@ -59,38 +63,86 @@ use Class::XSAccessor {
     accessors => \@FIELD_NAMES,
 };
 
+=head2 _defaults
+
+The default values of [% TABLE_NAME %]
+
+=cut
+
 sub _defaults {
     return {%DEFAULTS};
 }
+
+=head2 field_names
+
+Field names of [% TABLE_NAME %]
+
+=cut
 
 sub field_names {
     return [@FIELD_NAMES];
 }
 
+=head2 primary_keys
+
+The primary keys of [% TABLE_NAME %]
+
+=cut
+
 sub primary_keys {
     return [@PRIMARY_KEYS];
 }
+
+=head2
+
+The table name
+
+=cut
 
 sub table { "[% TABLE_NAME %]" }
 
 [% IF primary_keys.size > 0 -%]
 our $FIND_SQL = do {
     my $where = join(", ", map { "$_ = ?" } @PRIMARY_KEYS);
-    "SELECT * FROM [% TABLE_NAME %] WHERE $where;";
+    "SELECT * FROM `[% TABLE_NAME %]` WHERE $where;";
 };
+
+=head2 _find_one_sql
+
+The precalculated sql to find a single row [% TABLE_NAME %]
+
+=cut
 
 sub _find_one_sql {
     return $FIND_SQL;
 }
 [% END -%]
 
+=head2 _updateable_fields
+
+The updateable fields for [% TABLE_NAME %]
+
+=cut
+
 sub _updateable_fields {
     return [@FIELD_NAMES];
 }
 
+=head2 _inserteable_fields
+
+The inserteable fields for [% TABLE_NAME %]
+
+=cut
+
 sub _inserteable_fields {
     return [@INSERTABLE_FIELDS];
 }
+
+=head2 get_meta
+
+Get the meta data for [% TABLE_NAME %]
+
+=cut
 
 sub get_meta {
     return \%FIELDS_META;
