--- a/conf/systemd/packetfence-carbon-relay.service.tt
+++ b/conf/systemd/packetfence-carbon-relay.service.tt
@@ -6,6 +6,7 @@ After=packetfence-base.target packetfence-config.service packetfence-iptables.se
 
 [Service]
 Type=simple
+User=pf
 PIDFile=[% pidFile %]
 ExecStartPre=/usr/local/pf/bin/pfcmd service carbon-relay generateconfig
 ExecStart=[% cmdLine %]
