--- a/addons/dev-helpers/templates/pf-dal.pm.tt
+++ b/addons/dev-helpers/templates/pf-dal.pm.tt
@@ -1,6 +1,6 @@
 [% WRAPPER "class-wrapper.tt" -%]
-[% SET class_name = "pf::dal implementation for the table $TABLE_NAME" %]
-[% SET class_description = "pf::dal implementation for the table $TABLE_NAME" %]
+[% SET class_name = "pf::dal implementation for the table $TABLE_NAME" -%]
+[% SET class_description = "pf::dal implementation for the table $TABLE_NAME" -%]
 ###
 ### [% class %] is auto generated any change to this file will be lost
 ### Instead change in the [% class.replace('::_', '::') %] module
