--- a/addons/dev-helpers/templates/pf-dal.pm.tt
+++ b/addons/dev-helpers/templates/pf-dal.pm.tt
@@ -130,13 +130,13 @@ sub _updateable_fields {
     return [@FIELD_NAMES];
 }
 
-=head2 _inserteable_fields
+=head2 _insertable_fields
 
-The inserteable fields for [% TABLE_NAME %]
+The insertable fields for [% TABLE_NAME %]
 
 =cut
 
-sub _inserteable_fields {
+sub _insertable_fields {
     return [@INSERTABLE_FIELDS];
 }
 
