--- a/html/pfappserver/root/config/pfdetect/list.tt
+++ b/html/pfappserver/root/config/pfdetect/list.tt
@@ -1,19 +1,17 @@
-      <table id="pfdetects" class="table items" data-list-uri="[% c.uri_for(c.controller.action_for('list')) %]">
+      <table id="items" class="table items" data-list-uri="[% c.uri_for(c.controller.action_for('list')) %]">
         <thead>
           <tr>
             <th>[% l('Detector') %]</th>
-            <th>[% l('Status') %]</th>
             <th></th>
           </tr>
         </thead>
         <tbody>
           [% FOREACH item IN items %]
           <tr>
-            <td ><a href="[% c.pf_hash_for(c.controller.action_for('view'), [ item.id ]) %]">[% item.id | html %]</a></td>
-            <td >[% item.status | html %]</td>
+            <td class="item"><a href="[% c.uri_for(c.controller.action_for('view'), [ item.id ]) %]">[% item.id | html %]</a></td>
             <td>
               [%- IF can_access("PFDETECT_CREATE") %]
-              <a class="btn btn-mini" href="[% c.pf_hash_for(c.controller.action_for('clone'), [ item.id]) %]">[% l('Clone') %]</a>
+              <a class="btn btn-mini" href="[% c.uri_for(c.controller.action_for('clone'), [ item.id]) %]">[% l('Clone') %]</a>
               [%- END %]
               [%- IF can_access("PFDETECT_DELETE") %]
               <a class="btn btn-mini btn-danger" href="[% c.uri_for(c.controller.action_for('remove'), [ item.id ]) %]">[% l('Delete') %]</a>
